# GDBLE

./: Cargo.toml  README.md  README_EN.md
.github/workflows/: build-ljdc-dll.yml  release.yml
addons/gdble/: gdble.gdextension  libgdble.macos.arm64.dylib
demo/: bluetooth_test.gd
docs/: ANDROID_BUILD.md
src/: ble_characteristic.rs  ble_device.rs  ble_service.rs  bluetooth_manager.rs  bluetooth_scanner.rs  lib.rs  types.rs  windows_pairing.rs
