[package]
name = "gdble"
version = "0.5.5"
edition = "2021"

[dependencies]
godot = "0.5.3"
btleplug = "0.12.0"
tokio = { version = "1.52.1", features = ["full"] }
futures = "0.3.32"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Devices_Bluetooth",
    "Devices_Enumeration",
    "Foundation",
] }

[features]
default = []
android = []

[lib]
name = "gdble_ljdc"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

# Patch btleplug with WinRT fix: SetMaintainConnection(true) so GATT characteristics
# are discoverable for non-bonded trainers (Wahoo KICKR, Tacx Flux…) on Windows.
# Source vendored locally in vendor/btleplug — can be pushed as a GitHub fork if needed.
[patch.crates-io]
btleplug = { path = "vendor/btleplug" }
